# foo-hardware

./: .gitignore  Taskfile.yaml  init_data.sh  pyproject.toml
foo_hardware/: backend.py  constants.py  models.py  utils_test.py
foo_hardware/tests/: conftest.py  test_bar.py  test_hardware_item.py  test_user.py
