[tool.poetry]
name = "foo-hardware"
version = "0.1.0"
description = "Community hardware library"
authors = ["Dror Atariah <drorata@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "foo_hardware"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
sqlmodel = "^0.0.8"
uvicorn = {extras = ["standard"], version = "^0.21.0"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["./foo_hardware/tests/*"]
